objects/ASI_TH_CRM_Segment__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_ProductCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ASI_HK_CRM_Product_Category__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Subcategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-category</label>
        <referenceTo>ASI_TH_CRM_Sub_category__c</referenceTo>
        <relationshipLabel>Segments</relationshipLabel>
        <relationshipName>Segments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Segment_Code__c</fullName>
        <label>Segment Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Segment_EXID__c</fullName>
        <externalId>true</externalId>
        <label>Segment External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Segment</label>
    <listViews>
        <fullName>ASI_CRM_TW_Segments</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Segment_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Segment__c.ASI_CRM_TW_Segment</value>
        </filters>
        <label>TW CRM Segments</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Segment_Code__c</columns>
        <columns>ASI_TH_CRM_Segment_EXID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Users</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_Segment</fullName>
        <active>true</active>
        <description>This is used by TW CRM</description>
        <label>TW Segment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_Segment</fullName>
        <active>true</active>
        <label>ASI TH CRM Segment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>